--- a/src/components/clock/clock.css
+++ b/src/components/clock/clock.css
@@ -1,11 +1,11 @@
 .Time {
-    height: 500px;
-    width: 800px;
-    margin: auto;
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
-    padding-top: 70px;
+    height: 100px;
+    width: 100px;
+    margin-left: auto;
+    position: relative;
+    padding-top: 20px;
+    padding-right: 20px;
     font-family: courier, monospace;
     color: white;
-    font-size: 110px;
+    font-size: 50;
 }
